add test, remove comment

--- a/src/main/resources/application-mysql.properties
+++ b/src/main/resources/application-mysql.properties
@@ -3,9 +3,11 @@ db1.datasource.jdbc-url=jdbc:mysql://localhost:3306/db1?useSSL=false&useUnicode=
 db1.datasource.username=root
 db1.datasource.password=
 db1.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+db1.datasource.pool-size=10
 
 #db2
 db2.datasource.jdbc-url=jdbc:mysql://localhost:3306/db2?useSSL=false&useUnicode=yes&characterEncoding=UTF-8 	
 db2.datasource.username=root
 db2.datasource.password=
 db2.datasource.driver-class-name = com.mysql.cj.jdbc.Driver
+db2.datasource.pool-size=10
