--- a/src/main/resources/application-postgre.properties
+++ b/src/main/resources/application-postgre.properties
@@ -3,9 +3,11 @@ db1.datasource.jdbc-url=jdbc:postgresql://localhost:5432/postgres?currentSchema=
 db1.datasource.username=postgres
 db1.datasource.password=123456
 db1.datasource.driver-class-name = org.postgresql.Driver
+db1.datasource.pool-size=10
 
 #db2
 db2.datasource.jdbc-url=jdbc:postgresql://localhost:5432/postgres?currentSchema=db2
 db2.datasource.username=postgres
 db2.datasource.password=123456
 db2.datasource.driver-class-name = org.postgresql.Driver
+db2.datasource.pool-size=10
