--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.profiles.active=mysql
 #spring.profiles.active=postgre
 
 # = JPA / HIBERNATE
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql = true
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql = true
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.generate-ddl=true
+#spring.jpa.generate-ddl=true
